# typer-scripts

./: .gitignore  README.md  dev_requirements.in  dev_requirements.txt  mise.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: renovate.json
.github/workflows/: build.yml
tests/: conftest.py  test_core.py  test_repos.py  test_scripts.py  test_typer_tools.py
typer_scripts/: core.py  main.py  repos.py  scripts.py  typer_tools.py
