[tool.poetry]
name = "typer-scripts"
version = "0.1.0"
description = ""
authors = ["Ali Ghahraei <aligf94@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "typer_scripts"}]

[tool.poetry.dependencies]
python = "^3.11"
domestobot = "^0.1.1"

[tool.poetry.group.dev.dependencies]
typer = {extras = ["all"], version = "^0.9.0"}
pytest = "^7.3.1"
mypy = "^1.2.0"
ruff = "^0.11.10"
coverage = "^7.8.1"

[tool.poetry.scripts]
dbot = 'typer_scripts.main:app'

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'pass',
  'if TYPE_CHECKING.*',
]
fail_under = 99
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
