[tool.poetry]
name = "typer-scripts"
version = "0.1.0"
description = ""
authors = ["Ali Ghahraei <aligf94@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "typer_scripts"}]

[tool.poetry.dependencies]
python = "^3.11"
domestobot = "^0.1.1"

[tool.poetry.group.dev.dependencies]
typer = "^0.15.4"
pytest = "^8.3.5"
ruff = "^0.11.11"
coverage = "^7.8.1"
basedpyright = "^1.29.2"

[tool.poetry.scripts]
dbot = 'typer_scripts.main:app'

[tool.coverage.run]
branch = true
source = ['typer_scripts', 'tests']
omit = ['typer_scripts/main.py']

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'pass',
  'if TYPE_CHECKING.*',
]
fail_under = 100
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
