[project]
name = "typer-scripts"
version = "0.1.0"
description = ""
authors = [
  {name = "Ali Ghahraei", email = "aligf94@gmail.com"}
]
license = "GPLv3"
readme = "README.md"
requires-python = ">=3.13.3,<4.0"
dependencies = [
  "domestobot @ git+https://github.com/AliGhahraei/domestobot"
]

[project.scripts]
dbot = 'typer_scripts.main:app'


[tool.poetry]
packages = [{include = "typer_scripts"}]

[tool.poetry.group.dev.dependencies]
typer = "^0.16.0"
pytest = "^8.4.2"
ruff = "^0.14.14"
coverage = "^7.13.2"
basedpyright = "^1.37.4"


[tool.coverage.run]
branch = true
source = ['typer_scripts', 'tests']
omit = ['typer_scripts/main.py']

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'pass',
  '...',
  'if TYPE_CHECKING.*',
]
fail_under = 100
show_missing = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
