[metadata]
name = typer-scripts
version: 0.1.0
description = Miscellaneous scripts written with typer
author = Ali Ghahraei Figueroa
author_email = aligf94@gmail.com

[options]
packages = find:
python_requires = >=3.9

install_requires =
    domestobot

[options.entry_points]
console_scripts =
    dbot = typer_scripts.main:app
